--- a/azure.yaml
+++ b/azure.yaml
@@ -1,6 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
 name: acs-vector-search-demo
+metadata:
+  template: acs-vector-search-demo@0.0.1-beta
 services:
   backend:
     project: ./app/backend
