--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,6 +1,6 @@
-azure-identity==1.14.0
-azure-search-documents==11.4.0b6
-azure-storage-blob==12.17.0
-openai[datalib]==0.27.8
-tenacity==8.2.3
+azure-identity==1.16.0
+azure-search-documents==11.4.0
+azure-storage-blob==12.20.0
+openai[datalib]==1.30.5
+tenacity==8.3.0
 wget==3.2
