Initial storage of results

--- a/app/backend/logging_config.yaml
+++ b/app/backend/logging_config.yaml
@@ -17,6 +17,10 @@ loggers:
     level: DEBUG
     handlers: [console]
     propagate: no
+  results:
+    level: DEBUG
+    handlers: [console]
+    propagate: no
 root:
   level: DEBUG
   handlers: [console]
